main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "=3.42.0"
    }
  }
}

provider "aws" {
  region = var.region
}

data "terraform_remote_state" "this" {
  backend = "remote"

  config = {
    organization = var.tfc_org
    workspaces = {
      name = var.tfc_ws
    }
  }
}

locals {
  vpc_id         = data.terraform_remote_state.this.outputs.vpc_id_japan
  vpc_arn        = data.terraform_remote_state.this.outputs.vpc_arn_japan
  subnet_id      = data.terraform_remote_state.this.outputs.public_subnets_japan[0]
  vpc_owner_id   = data.terraform_remote_state.this.outputs.vpc_owner_id_japan
  vpc_cidr_block = data.terraform_remote_state.this.outputs.vpc_cidr_block_japan
}

resource "aws_security_group" "vault_client" {
  name = "${var.prefix}-hcp-security-group"

  vpc_id = local.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    Name = "${var.prefix}-hcp-security-group"
  }
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-bionic-18.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "vault_client" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  associate_public_ip_address = true
  subnet_id                   = local.subnet_id
  vpc_security_group_ids      = [aws_security_group.vault_client.id]

  tags = {
    Name = "${var.prefix}-vault_client-instance"
  }
}
